style.css
@font-face {
    font-family: 'Norse Bold';
    src: url(./fonts/Norse-Bold.otf);
}

:root {
    --text-color: #404040;
    --primary-color: #0f756d;
    --primary-color-light: #32a39a; 
    --accent-color: #e99e25;
}

* {
    font-family: "Inter", Helvetica, sans-serif;
}

body {
    background-color: #F9FAFB;
    display: flex;
    height: 100vh;
    padding: 0.5rem;
    gap: 1rem;
}

#hero {
    position: relative;
    flex: 4;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    background-image: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,.7) 85%), url("./img/odin-light.png");
    background-position: center top;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    border-radius: 0 25px 0 25px;
    filter: brightness(95%) contrast(105%) saturate(150%);
}

.logo-hero {
    position: absolute;
    top: 1.5rem;
    left: 1.5rem;
    width: 75px;
}

.logo-white {
    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
}

.headline, .quote {
    color: white;
    width: 100%;
}

.headline {
    text-wrap: balance;
    font-size: 3rem;
    font-family: 'Norse Bold';
    padding: 0 max(2rem, 8%);
}

.quote {
    text-wrap: pretty;
    font-size: 1.2rem;
    padding: .5em max(2rem, 8%) 3rem max(2rem, 8%);
}

#form-section {
    flex: 5;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    color: var(--text-color);
}

header {
    align-self: flex-start;
}

.logo-and-name {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.logo-black {
    filter: brightness(0);
    width: 30px;
}

.logo-name {
    font-family: 'Norse Bold';
    color: inherit;
    font-size: 1.5rem;
}

main {
    color: inherit;
    width: min(80%, 500px);
}

#cta-heading {
    font-size: 2rem;
    font-weight: 700;
}

#cta-text {
    font-size: 1rem;
    font-weight: 500;
}

.two-col {
    display: flex;
    gap: 1.5rem;
}

form {
    margin-top: 2rem;
}

form > div {
    margin-top: 1rem;
}

.two-col > div {
    flex: 1;
}

.form-input {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 4px;
}

label {
    font-size: 1rem;
}

input {
    font-size: 1rem;
    padding: 10px;
    height: 2.5rem;
    width: 100%;
    appearance: none;
    border: 2px solid lightgray;
    border-radius: 5px;
    color: var(--text-color);
}

input:focus {
    outline: none;
    border: 2px solid var(--primary-color-light);
    transition: all 0.2s linear;
}

button[type="submit"] {
    background-color: var(--primary-color);
    width: 100%;
    margin-top: 2rem;
    height: 3rem;
    border: none;
    border-radius: 5px;
    color: white;
    font-weight: 700;
}

.question {
    font-size: 0.8rem;
    margin-top: 0.5rem;
    text-align: center;
    font-style: italic;
}

footer {
    color: inherit;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.credit {
    font-size: 0.8rem;
}

.disclaimer {
    font-size: 0.7rem;
    text-align: center;
}

a {
    color: var(--accent-color);
}

